Bug 1313753 - Update overflow at the establisher of the 3D rendering context. r=dbaron